# lentilha

./: HOW_TO_RUN_NETWORK.md  README.md  docker-compose.yaml  package-lock.json  package.json  render.yaml  requirements.txt
app/: layout.jsx  page.jsx
app/alimentos/: page.jsx
app/pesquisa/: page.jsx
app/refeicoes/: page.jsx
app/resumo/: page.jsx
backend/: .gitignore  Dockerfile  README.md  audit_data.py  config.py  database.py  ensure_user.py  factory.py  main.py  populate_db.py  pyproject.toml
backend/controllers/: food_controller.py  meal_controller.py  user_controller.py
backend/files/: food_and_preparations.xlsx
backend/migrations/: env.py
backend/migrations/versions/: 5a70bf454424_new_food_column.py  b70e10308638_creating_initial_tables.py
backend/models/: __init__.py  food.py  meal.py  user.py
backend/schemas/: default.py  food_schema.py  meal_schema.py  user_schema.py
backend/services/: food_service.py  meal_service.py  user_service.py
components/: cards.jsx  sidebar.jsx
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.jsx  page.jsx
frontend/app/almoco/: page.jsx
frontend/app/perfil/: page.jsx
frontend/app/pesquisa/: page.jsx
frontend/base_cientifica/: Atualizacao POF 2017-2018_Pegadas_alimentos_Brasil.xlsx  metodologia_catalogo.md  métricas de equivalência.xlsx
frontend/components/: bottomNav.jsx  secondarySidebar.jsx  sidebar.jsx
frontend/conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
frontend/lib/: api.js  foodMapper.js
(+9 files in other folders)
